--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
 	<div class="content">
 		<img src="img/body.png" alt="">
+		<div class="result"></div>
 	</div>
 
 	<script>
@@ -41,8 +42,12 @@
 
 		$('input').on(('input'), function() {
 			var inputLength = $(this).val().length;
-			console.log(inputLength);
-			$('body').addClass('body--text')
+			if (inputLength > 0) {
+					$('body').addClass('body--text');
+			} else {
+				$('body').removeClass('body--text');
+			}
+
 		})
 
 	});
